updated docs, changed variable names, keyboard navigation

--- a/docs/config.yml
+++ b/docs/config.yml
@@ -1,4 +1,7 @@
 collections:
+  - name: "docs"
+    label: "docs"
+    folder: "./src/markdown/**.md"
   - name: "components" # Used in routes, e.g., /admin/collections/blog
     label: "components" # Used in the UI
     folder: "../lib/src/components/**/*.md" # The path to the folder where the documents are stored
